<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/tableLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:shrinkColumns="*"
        android:stretchColumns="*"
        tools:ignore="MissingConstraints">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip" >
            <TextView
                android:text="@string/nom"
                android:textAppearance="?android:attr/textAppearanceLarge"
                />
            <EditText
                android:id="@+id/saisiNom"
                android:hint="@string/entrez_votre_nom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
            />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip" >
            <TextView
                android:text="@string/Prénom"
                android:textAppearance="?android:attr/textAppearanceLarge"
                />
            <EditText
                android:id="@+id/saisiePrenom"
                android:hint="@string/entrez_votre_prenom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </TableRow>


        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip" >
            <TextView
                android:text="@string/Age"
                android:textAppearance="?android:attr/textAppearanceLarge"
                />
            <EditText
                android:id="@+id/saisieAge"
                android:hint="@string/entrez_votre_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip" >
            <TextView
                android:text="@string/Mail"
                android:textAppearance="?android:attr/textAppearanceLarge"
                />
            <EditText
                android:id="@+id/saisiemail"
                android:hint="@string/entrez_votre_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </TableRow>




        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip" >
            <TextView
                android:text="@string/Tel"
                android:textAppearance="?android:attr/textAppearanceLarge"
                />
            <EditText
                android:id="@+id/saisieTel"
                android:hint="@string/entrez_votre_numero_de_telephone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </TableRow>



    <Button
        android:id="@+id/Submit"
        android:text="@string/Submit" />

</TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>